After Dyanmic leaves

--- a/App.config
+++ b/App.config
@@ -27,8 +27,8 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
   <connectionStrings>
-     <!-- <add name="Defaulter" connectionString="Server=127.0.0.1;Port=3309;Uid=root;Pwd=Riz286;Database=aeams28012021;Charset=utf8mb4; Keepalive=60;default command timeout=60; Connection Timeout=60" /> -->
-     <add name="Default" connectionString="Server=127.0.0.1;Port=3306;Uid=root;Pwd=Rizvan!@#123;Database=aeams;Charset=utf8mb4; Keepalive=600;default command timeout=600; Connection Timeout=600;" />
+    <!--   <add name="Default" connectionString="Server=127.0.0.1;Port=3309;Uid=root;Pwd=Riz286;Database=aeams-24-july-2021;Charset=utf8mb4; Keepalive=60;default command timeout=60; Connection Timeout=60" /> -->
+    <add name="Default" connectionString="Server=127.0.0.1;Port=3306;Uid=root;Pwd=Rizvan!@#123;Database=aeams;Charset=utf8mb4; Keepalive=600;default command timeout=600; Connection Timeout=600;" /> 
   </connectionStrings>
   <appSettings>
     <add key="Path" value="Daily" />
