--- a/App.config
+++ b/App.config
@@ -15,7 +15,7 @@
     <PostSetting>  
       <add key="PostName" value="Getting Started With Config Section in .Net"/>  
       <add key="Category" value="C#"></add>  
-      <add key="Author" value="Mukesh Kumar"></add>  
+      <add key="Author" value="Muhammad Rizwan Waheed"></add>  
       <add key="PostedDate" value="28 Feb 2017"></add>  
     </PostSetting>  
   </BlogGroup>  
@@ -27,8 +27,8 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
   <connectionStrings>
-      <add name="Default" connectionString="Server=127.0.0.1;Port=3309;Uid=root;Pwd=Riz286;Database=aeams-24-july-2021;Charset=utf8mb4; Keepalive=60;default command timeout=60; Connection Timeout=60" />
-    <!-- <add name="Default" connectionString="Server=127.0.0.1;Port=3306;Uid=root;Pwd=Rizvan!@#123;Database=aeams;Charset=utf8mb4; Keepalive=600;default command timeout=600; Connection Timeout=600;" />  --> 
+      <!-- <add name="Default" connectionString="Server=127.0.0.1;Port=3309;Uid=root;Pwd=Riz286;Database=aeams-24-july-2021;Charset=utf8mb4; Keepalive=60;default command timeout=60; Connection Timeout=60" /> --> 
+     <add name="Default" connectionString="Server=127.0.0.1;Port=3306;Uid=root;Pwd=Rizvan!@#123;Database=aeams;Charset=utf8mb4; Keepalive=600;default command timeout=600; Connection Timeout=600;" /> 
   </connectionStrings>
   <appSettings>
     <add key="Path" value="Daily" />
